kubernetes/prod/manifests/vault/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault
  namespace: vault
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/group.name: gr-prod
    external-dns.alpha.kubernetes.io/hostname: vault.gauchoracing.com
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  ingressClassName: alb
  tls:
    - hosts:
        - vault.gauchoracing.com
  rules:
    - host: vault.gauchoracing.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kerbecs
                port:
                  number: 10310
